# algorithm_puzzles

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  a.out  camel.cpp  duplicateChars.cpp  fuckingGit  fuckingGit.orig  makeme.sh  prime.cpp
cWars/: CMakeLists.txt  README.md  makeNew.sh
cWars/alternatingSplit/: main.cpp
cWars/arithmaticProgression/: CMakeLists.txt  main.cpp
cWars/arithmaticProgression2/: main.cpp
cWars/automorphicN/: CMakeLists.txt  main.cpp
cWars/bigN/: CMakeLists.txt  main.cpp
cWars/bubbleSort/: CMakeLists.txt  main.cpp
cWars/camelCase/: CMakeLists.txt  camel.cpp
cWars/ceasarVariation/: CMakeLists.txt  main.cpp
cWars/closestAndSmallest/: main.cpp
cWars/conseqStrings/: main.cpp  te.cpp
cWars/countBits/: CMakeLists.txt  main.cpp
cWars/countingSheep/: CMakeLists.txt  main.cpp
cWars/disembowelVowels/: CMakeLists.txt  main.cpp
cWars/dontGiveMeFive/: main.cpp
cWars/duplicateChars/: CMakeLists.txt  main.cpp
cWars/egyptianFracs/: CMakeLists.txt
cWars/egyptianFracs3/: CMakeLists.txt  main.cpp
cWars/evenOddDisparaty/: main.cpp
cWars/exesAndOhs/: main.cpp
cWars/growthOfAPopulation/: CMakeLists.txt  main.cpp
cWars/highestAndLowest/: CMakeLists.txt
cWars/howGood/: main.cpp
cWars/isogram/: main.cpp
cWars/likes/: CMakeLists.txt  main.cpp
cWars/maxSubarraySum/: main.cpp
cWars/mexicanWave/: CMakeLists.txt  main.cpp
cWars/middleChars/: main.cpp
cWars/morse/: main.cpp
cWars/mumbling/: main.cpp
cWars/oddInt/: main.cpp
cWars/parityOutlier/: CMakeLists.txt  main.cpp
cWars/pascal/: main.cpp
cWars/perfectSquare/: main.cpp
cWars/permutations/: main.cpp
cWars/phoneToString/: main.cpp
cWars/pigLatin/: main.cpp
cWars/playingWithDigits/: CMakeLists.txt  main.cpp
cWars/primeGap/: CMakeLists.txt  main.cpp
cWars/primes/: CMakeLists.txt  main.cpp
cWars/prizeDraw/: CMakeLists.txt  main.cpp
cWars/reverseNumber/: main.cpp
cWars/reverseString/: main.cpp
cWars/rgbToHex/: CMakeLists.txt  main.cpp
cWars/romanNumerals/: main.cpp
cWars/romanNumerals2/: CMakeLists.txt  main.cpp
cWars/rot13/: main.cpp  (+1 more)
(+188 files in other folders)
