# add directories

add_subdirectory(alternatingSplit)
add_subdirectory(arithmaticProgression)
add_subdirectory(arithmaticProgression2)
add_subdirectory(automorphicN)
add_subdirectory(bigN)
add_subdirectory(bubbleSort)
add_subdirectory(ceasarVariation)
add_subdirectory(conseqStrings)
add_subdirectory(countingSheep)
add_subdirectory(disembowelVowels)
add_subdirectory(dontGiveMeFive)
add_subdirectory(egyptianFracs)
add_subdirectory(evenOddDisparaty)
add_subdirectory(exesAndOhs)
add_subdirectory(growthOfAPopulation)
add_subdirectory(highestAndLowest)
add_subdirectory(howGood)
add_subdirectory(isogram)
add_subdirectory(likes)
add_subdirectory(maxSubarraySum)
add_subdirectory(mexicanWave)
add_subdirectory(middleChars)
add_subdirectory(morse)
add_subdirectory(mumbling)
add_subdirectory(oddInt)
add_subdirectory(parityOutlier)
add_subdirectory(pascal)
add_subdirectory(perfectSquare)
add_subdirectory(permutations)
add_subdirectory(pigLatin)
add_subdirectory(playingWithDigits)
add_subdirectory(prizeDraw)
add_subdirectory(reverseNumber)
add_subdirectory(reverseString)
add_subdirectory(rgbToHex)
add_subdirectory(romanNumerals)
add_subdirectory(rot13)
add_subdirectory(sameArray)
add_subdirectory(smallestInArray)
add_subdirectory(splitStrings)
add_subdirectory(stonePrimes)
add_subdirectory(subStringSearch)
add_subdirectory(sumArray)
add_subdirectory(sumDifference)
add_subdirectory(sumOddTriangle)
add_subdirectory(sumOfNumbersString)
add_subdirectory(sumOfParts)
add_subdirectory(triengles)
add_subdirectory(twitterString)
add_subdirectory(twoSum)
add_subdirectory(uniqueInOrder)
add_subdirectory(vasyaClerk)
add_subdirectory(weirdWords)
add_subdirectory(primeGap)
add_subdirectory(validBraces2)
add_subdirectory(validBraces)
add_subdirectory(romanNumerals2)
add_subdirectory(camelCase)
add_subdirectory(countBits)
add_subdirectory(duplicateChars)
add_subdirectory(tillMachine)
add_subdirectory(phoneToString)
add_subdirectory(primes)
add_subdirectory(closestAndSmallest)
